k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pingflow
  labels:
    name: pingflow
    app.kubernetes.io/managed-by: argocd
